@@ -1,26 +1,20 @@
 package com.example.be.security;
 
-import com.example.be.repository.RoleRepository;
-import com.example.be.repository.UserRepository;
 import com.example.be.security.filter.CustomAuthenticationFilter;
 import com.example.be.security.filter.CustomeAuthorizationFilter;
-import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
-import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.config.annotation.authentication.builders.AuthenticationManagerBuilder;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.core.userdetails.UserDetailsService;
-import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
-import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.cors.CorsConfiguration;
 
 import java.util.Arrays;
@@ -47,16 +41,17 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
                 authenticationManagerBean()
         );
         customAuthenticationFilter.setFilterProcessesUrl("/login");
-        http.cors().configurationSource(request-> {
+        http.cors().configurationSource(request -> {
             CorsConfiguration configuration = new CorsConfiguration();
-            configuration.setAllowedOrigins(List.of("http://localhost:3000"));
-            configuration.setAllowedMethods(Arrays.asList("GET","POST","PUT","DELETE"));
+            configuration.setAllowedOrigins(List.of("http://localhost:3000",
+                    "http://localhost:8081"));
+            configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE"));
             configuration.setAllowedHeaders(List.of("*"));
             return configuration;
         });
         http.csrf().disable();
         http.sessionManagement().sessionCreationPolicy(SessionCreationPolicy.STATELESS);
-        http.authorizeRequests().antMatchers("/login/**","/refresh-token/**",
+        http.authorizeRequests().antMatchers("/login/**", "/refresh-token/**",
                 "/api/otp/register/**",
                 "/api/otp/validate/**").permitAll();
         http.authorizeRequests().antMatchers(HttpMethod.GET, "/api/users/**")
@@ -68,9 +63,12 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
         http.addFilterBefore(new CustomeAuthorizationFilter(),
                 UsernamePasswordAuthenticationFilter.class); //intercept every request before before filters
     }
+
     @Bean
     @Override
     public AuthenticationManager authenticationManagerBean() throws Exception {
         return super.authenticationManagerBean();
     }
+
+
 }
